// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing Info component it should show frontend info successfully 1`] = `
<div
  class="MuiDrawer-root MuiDrawer-anchorRight MuiDrawer-modal MuiModal-root css-1hbxaor-MuiModal-root-MuiDrawer-root"
  data-testid="version-drawer-37d307ae-4f1e-4d8d-bafe-fd642f8af4dc"
  role="presentation"
>
  <div
    aria-hidden="true"
    class="MuiBackdrop-root MuiModal-backdrop css-4nmryk-MuiBackdrop-root-MuiModal-backdrop"
    style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
  />
  <div
    data-testid="sentinelStart"
    tabindex="0"
  />
  <div
    aria-modal="true"
    class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation16 MuiDrawer-paper MuiDrawer-paperAnchorRight css-ruovjy-MuiPaper-root-MuiDrawer-paper"
    role="dialog"
    style="--Paper-shadow: var(--mui-shadows-16);"
    tabindex="-1"
  >
    <div
      class="MuiBox-root css-15iga1d"
      data-testid="version-drawer-header-37d307ae-4f1e-4d8d-bafe-fd642f8af4dc"
    >
      <h5
        class="MuiTypography-root MuiTypography-h5 css-1qy0vqe-MuiTypography-root"
      >
        Application Information
      </h5>
      <button
        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorSecondary MuiIconButton-sizeMedium css-3u0bfz-MuiButtonBase-root-MuiIconButton-root"
        data-testid="version-drawer-header-button-37d307ae-4f1e-4d8d-bafe-fd642f8af4dc"
        tabindex="0"
        title="Close application information"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-fnq9fx-MuiSvgIcon-root"
          data-testid="version-drawer-header-icon-37d307ae-4f1e-4d8d-bafe-fd642f8af4dc"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
          />
        </svg>
      </button>
    </div>
    <div
      class="MuiBox-root css-0"
      data-testid="version-37d307ae-4f1e-4d8d-bafe-fd642f8af4dc"
    >
      <div
        class="MuiBox-root css-v9uiu8"
        tabindex="0"
      >
        <div
          class="MuiBox-root css-1ec5brm"
          data-testid="version-frontend-37d307ae-4f1e-4d8d-bafe-fd642f8af4dc"
        >
          <h6
            class="MuiTypography-root MuiTypography-h6 css-d6la45-MuiTypography-root"
          >
            Frontend
          </h6>
          <div
            class="MuiBox-root css-ota23g"
          >
            <div
              class="MuiBox-root css-0"
            >
              <h6
                class="MuiTypography-root MuiTypography-h6 css-erpy6n-MuiTypography-root"
              >
                Date
              </h6>
              <p
                class="MuiTypography-root MuiTypography-body1 css-id7iv4-MuiTypography-root"
              >
                <span
                  class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse MuiSkeleton-withChildren MuiSkeleton-fitContent MuiSkeleton-heightAuto css-1nd7a9v-MuiSkeleton-root"
                >
                                                                  
                </span>
              </p>
            </div>
            <div
              class="MuiBox-root css-0"
            >
              <h6
                class="MuiTypography-root MuiTypography-h6 css-erpy6n-MuiTypography-root"
              >
                Version
              </h6>
              <p
                class="MuiTypography-root MuiTypography-body1 css-id7iv4-MuiTypography-root"
              >
                <span
                  class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse MuiSkeleton-withChildren MuiSkeleton-fitContent MuiSkeleton-heightAuto css-1nd7a9v-MuiSkeleton-root"
                >
                        
                </span>
              </p>
            </div>
            <div
              class="MuiBox-root css-0"
            >
              <h6
                class="MuiTypography-root MuiTypography-h6 css-erpy6n-MuiTypography-root"
              >
                Build Number
              </h6>
              <p
                class="MuiTypography-root MuiTypography-body1 css-id7iv4-MuiTypography-root"
              >
                <span
                  class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse MuiSkeleton-withChildren MuiSkeleton-fitContent MuiSkeleton-heightAuto css-1nd7a9v-MuiSkeleton-root"
                >
                        
                </span>
              </p>
            </div>
            <div
              class="MuiBox-root css-0"
            >
              <h6
                class="MuiTypography-root MuiTypography-h6 css-erpy6n-MuiTypography-root"
              >
                GIT SHA
              </h6>
              <p
                class="MuiTypography-root MuiTypography-body1 css-id7iv4-MuiTypography-root"
              >
                <span
                  class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse MuiSkeleton-withChildren MuiSkeleton-fitContent MuiSkeleton-heightAuto css-1nd7a9v-MuiSkeleton-root"
                >
                                                                                                
                </span>
              </p>
            </div>
          </div>
        </div>
        <div
          class="MuiBox-root css-1ec5brm"
          data-testid="version-backend-37d307ae-4f1e-4d8d-bafe-fd642f8af4dc"
        >
          <h6
            class="MuiTypography-root MuiTypography-h6 css-d6la45-MuiTypography-root"
          >
            Backend
          </h6>
          <div
            class="MuiBox-root css-ota23g"
          >
            <div
              class="MuiBox-root css-0"
            >
              <h6
                class="MuiTypography-root MuiTypography-h6 css-erpy6n-MuiTypography-root"
              >
                Date
              </h6>
              <p
                class="MuiTypography-root MuiTypography-body1 css-id7iv4-MuiTypography-root"
              >
                <span
                  class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse MuiSkeleton-withChildren MuiSkeleton-fitContent MuiSkeleton-heightAuto css-1nd7a9v-MuiSkeleton-root"
                >
                                                                  
                </span>
              </p>
            </div>
            <div
              class="MuiBox-root css-0"
            >
              <h6
                class="MuiTypography-root MuiTypography-h6 css-erpy6n-MuiTypography-root"
              >
                Version
              </h6>
              <p
                class="MuiTypography-root MuiTypography-body1 css-id7iv4-MuiTypography-root"
              >
                <span
                  class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse MuiSkeleton-withChildren MuiSkeleton-fitContent MuiSkeleton-heightAuto css-1nd7a9v-MuiSkeleton-root"
                >
                        
                </span>
              </p>
            </div>
            <div
              class="MuiBox-root css-0"
            >
              <h6
                class="MuiTypography-root MuiTypography-h6 css-erpy6n-MuiTypography-root"
              >
                Build Number
              </h6>
              <p
                class="MuiTypography-root MuiTypography-body1 css-id7iv4-MuiTypography-root"
              >
                <span
                  class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse MuiSkeleton-withChildren MuiSkeleton-fitContent MuiSkeleton-heightAuto css-1nd7a9v-MuiSkeleton-root"
                >
                        
                </span>
              </p>
            </div>
            <div
              class="MuiBox-root css-0"
            >
              <h6
                class="MuiTypography-root MuiTypography-h6 css-erpy6n-MuiTypography-root"
              >
                GIT SHA
              </h6>
              <p
                class="MuiTypography-root MuiTypography-body1 css-id7iv4-MuiTypography-root"
              >
                <span
                  class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse MuiSkeleton-withChildren MuiSkeleton-fitContent MuiSkeleton-heightAuto css-1nd7a9v-MuiSkeleton-root"
                >
                                                                                                
                </span>
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    data-testid="sentinelEnd"
    tabindex="0"
  />
</div>
`;

exports[`Testing Info component it should show frontend info successfully: version-37d307ae-4f1e-4d8d-bafe-fd642f8af4dc 1`] = `
<div
  class="MuiBox-root css-0"
  data-testid="version-37d307ae-4f1e-4d8d-bafe-fd642f8af4dc"
>
  <div
    class="MuiBox-root css-v9uiu8"
    tabindex="0"
  >
    <div
      class="MuiBox-root css-1ec5brm"
      data-testid="version-frontend-37d307ae-4f1e-4d8d-bafe-fd642f8af4dc"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6 css-d6la45-MuiTypography-root"
      >
        Frontend
      </h6>
      <div
        class="MuiBox-root css-ota23g"
      >
        <div
          class="MuiBox-root css-0"
        >
          <h6
            class="MuiTypography-root MuiTypography-h6 css-erpy6n-MuiTypography-root"
          >
            Date
          </h6>
          <p
            class="MuiTypography-root MuiTypography-body1 css-id7iv4-MuiTypography-root"
          >
            <span
              class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse MuiSkeleton-withChildren MuiSkeleton-fitContent MuiSkeleton-heightAuto css-1nd7a9v-MuiSkeleton-root"
            >
                                                              
            </span>
          </p>
        </div>
        <div
          class="MuiBox-root css-0"
        >
          <h6
            class="MuiTypography-root MuiTypography-h6 css-erpy6n-MuiTypography-root"
          >
            Version
          </h6>
          <p
            class="MuiTypography-root MuiTypography-body1 css-id7iv4-MuiTypography-root"
          >
            <span
              class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse MuiSkeleton-withChildren MuiSkeleton-fitContent MuiSkeleton-heightAuto css-1nd7a9v-MuiSkeleton-root"
            >
                    
            </span>
          </p>
        </div>
        <div
          class="MuiBox-root css-0"
        >
          <h6
            class="MuiTypography-root MuiTypography-h6 css-erpy6n-MuiTypography-root"
          >
            Build Number
          </h6>
          <p
            class="MuiTypography-root MuiTypography-body1 css-id7iv4-MuiTypography-root"
          >
            <span
              class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse MuiSkeleton-withChildren MuiSkeleton-fitContent MuiSkeleton-heightAuto css-1nd7a9v-MuiSkeleton-root"
            >
                    
            </span>
          </p>
        </div>
        <div
          class="MuiBox-root css-0"
        >
          <h6
            class="MuiTypography-root MuiTypography-h6 css-erpy6n-MuiTypography-root"
          >
            GIT SHA
          </h6>
          <p
            class="MuiTypography-root MuiTypography-body1 css-id7iv4-MuiTypography-root"
          >
            <span
              class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse MuiSkeleton-withChildren MuiSkeleton-fitContent MuiSkeleton-heightAuto css-1nd7a9v-MuiSkeleton-root"
            >
                                                                                            
            </span>
          </p>
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root css-1ec5brm"
      data-testid="version-backend-37d307ae-4f1e-4d8d-bafe-fd642f8af4dc"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6 css-d6la45-MuiTypography-root"
      >
        Backend
      </h6>
      <div
        class="MuiBox-root css-ota23g"
      >
        <div
          class="MuiBox-root css-0"
        >
          <h6
            class="MuiTypography-root MuiTypography-h6 css-erpy6n-MuiTypography-root"
          >
            Date
          </h6>
          <p
            class="MuiTypography-root MuiTypography-body1 css-id7iv4-MuiTypography-root"
          >
            <span
              class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse MuiSkeleton-withChildren MuiSkeleton-fitContent MuiSkeleton-heightAuto css-1nd7a9v-MuiSkeleton-root"
            >
                                                              
            </span>
          </p>
        </div>
        <div
          class="MuiBox-root css-0"
        >
          <h6
            class="MuiTypography-root MuiTypography-h6 css-erpy6n-MuiTypography-root"
          >
            Version
          </h6>
          <p
            class="MuiTypography-root MuiTypography-body1 css-id7iv4-MuiTypography-root"
          >
            <span
              class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse MuiSkeleton-withChildren MuiSkeleton-fitContent MuiSkeleton-heightAuto css-1nd7a9v-MuiSkeleton-root"
            >
                    
            </span>
          </p>
        </div>
        <div
          class="MuiBox-root css-0"
        >
          <h6
            class="MuiTypography-root MuiTypography-h6 css-erpy6n-MuiTypography-root"
          >
            Build Number
          </h6>
          <p
            class="MuiTypography-root MuiTypography-body1 css-id7iv4-MuiTypography-root"
          >
            <span
              class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse MuiSkeleton-withChildren MuiSkeleton-fitContent MuiSkeleton-heightAuto css-1nd7a9v-MuiSkeleton-root"
            >
                    
            </span>
          </p>
        </div>
        <div
          class="MuiBox-root css-0"
        >
          <h6
            class="MuiTypography-root MuiTypography-h6 css-erpy6n-MuiTypography-root"
          >
            GIT SHA
          </h6>
          <p
            class="MuiTypography-root MuiTypography-body1 css-id7iv4-MuiTypography-root"
          >
            <span
              class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse MuiSkeleton-withChildren MuiSkeleton-fitContent MuiSkeleton-heightAuto css-1nd7a9v-MuiSkeleton-root"
            >
                                                                                            
            </span>
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Testing Info component it should show frontend info successfully: version-backend-37d307ae-4f1e-4d8d-bafe-fd642f8af4dc 1`] = `
<div
  class="MuiBox-root css-1ec5brm"
  data-testid="version-backend-37d307ae-4f1e-4d8d-bafe-fd642f8af4dc"
>
  <h6
    class="MuiTypography-root MuiTypography-h6 css-d6la45-MuiTypography-root"
  >
    Backend
  </h6>
  <div
    class="MuiBox-root css-ota23g"
  >
    <div
      class="MuiBox-root css-0"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6 css-erpy6n-MuiTypography-root"
      >
        Date
      </h6>
      <p
        class="MuiTypography-root MuiTypography-body1 css-id7iv4-MuiTypography-root"
      >
        <span
          class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse MuiSkeleton-withChildren MuiSkeleton-fitContent MuiSkeleton-heightAuto css-1nd7a9v-MuiSkeleton-root"
        >
                                                          
        </span>
      </p>
    </div>
    <div
      class="MuiBox-root css-0"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6 css-erpy6n-MuiTypography-root"
      >
        Version
      </h6>
      <p
        class="MuiTypography-root MuiTypography-body1 css-id7iv4-MuiTypography-root"
      >
        <span
          class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse MuiSkeleton-withChildren MuiSkeleton-fitContent MuiSkeleton-heightAuto css-1nd7a9v-MuiSkeleton-root"
        >
                
        </span>
      </p>
    </div>
    <div
      class="MuiBox-root css-0"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6 css-erpy6n-MuiTypography-root"
      >
        Build Number
      </h6>
      <p
        class="MuiTypography-root MuiTypography-body1 css-id7iv4-MuiTypography-root"
      >
        <span
          class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse MuiSkeleton-withChildren MuiSkeleton-fitContent MuiSkeleton-heightAuto css-1nd7a9v-MuiSkeleton-root"
        >
                
        </span>
      </p>
    </div>
    <div
      class="MuiBox-root css-0"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6 css-erpy6n-MuiTypography-root"
      >
        GIT SHA
      </h6>
      <p
        class="MuiTypography-root MuiTypography-body1 css-id7iv4-MuiTypography-root"
      >
        <span
          class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse MuiSkeleton-withChildren MuiSkeleton-fitContent MuiSkeleton-heightAuto css-1nd7a9v-MuiSkeleton-root"
        >
                                                                                        
        </span>
      </p>
    </div>
  </div>
</div>
`;

exports[`Testing Info component it should show frontend info successfully: version-frontend-37d307ae-4f1e-4d8d-bafe-fd642f8af4dc 1`] = `
<div
  class="MuiBox-root css-1ec5brm"
  data-testid="version-frontend-37d307ae-4f1e-4d8d-bafe-fd642f8af4dc"
>
  <h6
    class="MuiTypography-root MuiTypography-h6 css-d6la45-MuiTypography-root"
  >
    Frontend
  </h6>
  <div
    class="MuiBox-root css-ota23g"
  >
    <div
      class="MuiBox-root css-0"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6 css-erpy6n-MuiTypography-root"
      >
        Date
      </h6>
      <p
        class="MuiTypography-root MuiTypography-body1 css-id7iv4-MuiTypography-root"
      >
        <span
          class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse MuiSkeleton-withChildren MuiSkeleton-fitContent MuiSkeleton-heightAuto css-1nd7a9v-MuiSkeleton-root"
        >
                                                          
        </span>
      </p>
    </div>
    <div
      class="MuiBox-root css-0"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6 css-erpy6n-MuiTypography-root"
      >
        Version
      </h6>
      <p
        class="MuiTypography-root MuiTypography-body1 css-id7iv4-MuiTypography-root"
      >
        <span
          class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse MuiSkeleton-withChildren MuiSkeleton-fitContent MuiSkeleton-heightAuto css-1nd7a9v-MuiSkeleton-root"
        >
                
        </span>
      </p>
    </div>
    <div
      class="MuiBox-root css-0"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6 css-erpy6n-MuiTypography-root"
      >
        Build Number
      </h6>
      <p
        class="MuiTypography-root MuiTypography-body1 css-id7iv4-MuiTypography-root"
      >
        <span
          class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse MuiSkeleton-withChildren MuiSkeleton-fitContent MuiSkeleton-heightAuto css-1nd7a9v-MuiSkeleton-root"
        >
                
        </span>
      </p>
    </div>
    <div
      class="MuiBox-root css-0"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6 css-erpy6n-MuiTypography-root"
      >
        GIT SHA
      </h6>
      <p
        class="MuiTypography-root MuiTypography-body1 css-id7iv4-MuiTypography-root"
      >
        <span
          class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse MuiSkeleton-withChildren MuiSkeleton-fitContent MuiSkeleton-heightAuto css-1nd7a9v-MuiSkeleton-root"
        >
                                                                                        
        </span>
      </p>
    </div>
  </div>
</div>
`;
